<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".registerScreen.RegisterScreen">

    <LinearLayout
        android:background="@color/whitesmoke"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/layoutPadding"
        android:paddingEnd="@dimen/layoutPadding">

        <TextView
            android:id="@+id/titleBaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/banner_register"
            android:textAlignment="gravity"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="20sp"
            android:background="@color/white"
            android:hint="@string/user_reg"
            app:startIconDrawable="@drawable/user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="20sp"
            android:background="@color/white"
            android:hint="@string/mail"
            app:startIconDrawable="@drawable/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/pass"
            android:background="@color/white"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/pass_rep"
            android:background="@color/white"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPasswordRegRep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/acceptReg"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:textSize="16sp"
            android:layout_height="60sp"
            android:layout_weight="0"
            android:textColorLink="@color/faceblue"
            android:buttonTint="@color/faceblue"
            android:text="@string/checkbox_reg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_weight="0"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/faceblue"
            android:layout_marginTop="@dimen/marginTop"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/register" />

    </LinearLayout>
</layout>