<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".welcomeScreen.WelcomeScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            android:gravity="center">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_weight="0"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_weight="0"
                android:text="@string/app_name" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginStart="@dimen/layoutPadding"
            android:layout_marginEnd="@dimen/layoutPadding"
            android:layout_marginBottom="5sp"
            android:background="@drawable/background_welcome_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.852">

            <TextView
                android:id="@+id/banner"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:layout_marginBottom="220sp"
                android:text="@string/banner" />

            <TextView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/decription" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:layout_marginBottom="15sp"
                android:textColor="@color/white"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/faceblue"
                android:text="@string/login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/login"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginTop="125sp"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:layout_marginBottom="15sp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/faceblue"
                android:textColor="@color/white"
                android:text="@string/register" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>