<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".activites.main.MainActivity">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_weight="0"
                android:background="@color/faceblue">

                <ImageButton
                    android:id="@+id/imageBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/arrow_back"
                    android:importantForAccessibility="no" />

            </FrameLayout>


            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/background"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/tittleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="TextView"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/priceDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alertDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="18sp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lengthDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="18sp"
                android:text="TextView" />

            <TextView
                android:id="@+id/transportDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="18sp"
                android:text="TextView" />

            <TextView
                android:id="@+id/usersRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="20sp"
                android:text="@string/userRating" />

            <RatingBar
                android:id="@+id/ratingBarUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:isIndicator="true"
                android:textSize="16sp"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"/>

            <TextView
                android:id="@+id/userRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="20sp"
                android:text="@string/yourRating" />

            <RatingBar
                android:id="@+id/ratingBarUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:textSize="16sp"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"/>

            <Button
                android:id="@+id/deleteRoute"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:backgroundTint="@color/faceblue"
                android:text="@string/deleteFav"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addFavorite"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:backgroundTint="@color/faceblue"
                android:text="@string/add"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="@dimen/layoutPadding"
                android:layout_marginEnd="@dimen/layoutPadding"
                android:backgroundTint="@color/faceblue"
                android:text="@string/start"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>